rename sidebar in basic page

--- a/basics.html
+++ b/basics.html
@@ -45,16 +45,16 @@
       <div dir="ltr">
         <div data-theme="" class="app-theme">
           <div>
-            <div class="_1hhecre">
-              <div class="_gjnbsm" aria-hidden="false">
+            <div class="app-theme__container">
+              <div class="app-theme__wrapper" aria-hidden="false">
                 <div>
                   <nav
-                    class="_1cjyrsr"
+                    class="app-theme__nav"
                     aria-labelledby="edit-experience-modal-heading"
                   >
-                    <div class="_1utw96k5">
-                      <div class="_1ok79xh">
-                        <div class="_2mc3e2">
+                    <div class="app-theme__nav-container">
+                      <div class="app-theme__nav-wrapper">
+                        <div class="app-theme__logo-wrapper">
                           <a
                             aria-label="Experience hosting dashboard"
                             href="/experience-hosting"
@@ -78,30 +78,30 @@
                                 ></path></svg></span
                           ></a>
 
-                          <div class="_1a1hrnn">
+                          <div class="app-theme__save-btn-wrapper">
                             <button
                               type="button"
-                              class="_1e5q4qoz"
+                              class="app-theme__save-btn"
                               onclick="window.location.href='experiences.html';"
                             >
                               Save and exit
                             </button>
                           </div>
                         </div>
-                        <h2 id="edit-experience-modal-heading" class="_7x5ntq">
+                        <h2 id="edit-experience-modal-heading" class="app-theme__header-h2">
                           Submit your experience
                         </h2>
                         <div class="relative">
                           <div>
                             <div class="box-border" id="Your idea-section-row">
                               <div
-                                class="_qx2ic59"
+                                class="app-theme__sidebar-menu"
                                 role="button"
                                 aria-disabled="false"
                                 aria-expanded="true"
                                 tabindex="0"
                               >
-                                <div class="_126gvgmd">
+                                <div class="app-theme__sidebar-menu-icon">
                                   <svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -121,7 +121,7 @@
                                   </svg>
                                 </div>
                                 <div
-                                  class="_bxm33j"
+                                  class="app-theme__sidebar-menu-text"
                                   id="Your idea-row-title"
                                   data-testid="idea-row-title"
                                 >
@@ -129,23 +129,23 @@
                                 </div>
                               </div>
                               <div
-                                class="_14lk9e14"
+                                class="app-theme__sidebar-menu-expandable"
                                 id="Your idea-section-row-row-expandable-items"
                               >
-                                <div class="_1rw28r4l">
-                                  <ul class="_19qnm18">
-                                    <li class="_1vtamo0">
+                                <div class="app-theme__sidebar-expandable-menus">
+                                  <ul class="app-theme__sidebar-expandable-ul">
+                                    <li class="app-theme__sidebar-expandable-li">
                                       <button
                                         type="button"
-                                        class="_o7xaku5"
+                                        class="app-theme__sidebar-expandable-button"
                                         data-veloute="experience-type"
                                         onclick="window.location.href='experienceType.html';"
                                       >
-                                        <div class="_1o9iciw">
-                                          <div class="_cwxj1a">
+                                        <div class="app-theme__sidebar-expandable-text-wrapper">
+                                          <div class="app-theme__sidebar-expandable-text">
                                             Experience type
                                           </div>
-                                          <div class="_1lr0a4">
+                                          <div class="app-theme__sidebar-expandable-icon-wrapper">
                                             <svg
                                               viewBox="0 0 16 16"
                                               xmlns="http://www.w3.org/2000/svg"
@@ -167,16 +167,16 @@
                                         </div>
                                       </button>
                                     </li>
-                                    <li class="_1vtamo0">
+                                    <li class="app-theme__sidebar-expandable-li">
                                       <button
                                         type="button"
-                                        class="_o7xaku5"
+                                        class="app-theme__sidebar-expandable-button"
                                         data-veloute="city"
                                         onclick="window.location.href='basics.html';"
                                       >
                                         <div class="_194uxgy3">
-                                          <div class="_cwxj1a">Basics</div>
-                                          <div class="_1lr0a4">
+                                          <div class="app-theme__sidebar-expandable-text">Basics</div>
+                                          <div class="app-theme__sidebar-expandable-icon-wrapper">
                                             <svg
                                               viewBox="0 0 32 32"
                                               xmlns="http://www.w3.org/2000/svg"
@@ -198,15 +198,15 @@
                                         </div>
                                       </button>
                                     </li>
-                                    <li class="_1vtamo0">
+                                    <li class="app-theme__sidebar-expandable-li">
                                       <button
                                         type="button"
-                                        class="_o7xaku5"
+                                        class="app-theme__sidebar-expandable-button"
                                         data-veloute="idea-theme"
                                       >
-                                        <div class="_1o9iciw">
-                                          <div class="_cwxj1a">Your theme</div>
-                                          <div class="_1lr0a4">
+                                        <div class="app-theme__sidebar-expandable-text-wrapper">
+                                          <div class="app-theme__sidebar-expandable-text">Your theme</div>
+                                          <div class="app-theme__sidebar-expandable-icon-wrapper">
                                             <svg
                                               viewBox="0 0 32 32"
                                               xmlns="http://www.w3.org/2000/svg"
@@ -245,7 +245,7 @@
                                 aria-expanded="false"
                                 tabindex="-1"
                               >
-                                <div class="_126gvgmd">
+                                <div class="app-theme__sidebar-menu-icon">
                                   <svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -265,7 +265,7 @@
                                   </svg>
                                 </div>
                                 <div
-                                  class="_bxm33j"
+                                  class="app-theme__sidebar-menu-text"
                                   id="What we're looking for-row-title"
                                   data-testid="expectations-row-title"
                                 >
@@ -307,7 +307,7 @@
                                 aria-expanded="false"
                                 tabindex="-1"
                               >
-                                <div class="_126gvgmd">
+                                <div class="app-theme__sidebar-menu-icon">
                                   <svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -327,7 +327,7 @@
                                   </svg>
                                 </div>
                                 <div
-                                  class="_bxm33j"
+                                  class="app-theme__sidebar-menu-text"
                                   id="Experience page-row-title"
                                   data-testid="experience_1-row-title"
                                 >
@@ -366,7 +366,7 @@
                                 aria-expanded="false"
                                 tabindex="0"
                               >
-                                <div class="_126gvgmd">
+                                <div class="app-theme__sidebar-menu-icon">
                                   <svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -386,7 +386,7 @@
                                   </svg>
                                 </div>
                                 <div
-                                  class="_bxm33j"
+                                  class="app-theme__sidebar-menu-text"
                                   id="Settings-row-title"
                                   data-testid="settings-row-title"
                                 >
@@ -407,7 +407,7 @@
                                 aria-expanded="false"
                                 tabindex="-1"
                               >
-                                <div class="_126gvgmd">
+                                <div class="app-theme__sidebar-menu-icon">
                                   <svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -427,7 +427,7 @@
                                   </svg>
                                 </div>
                                 <div
-                                  class="_bxm33j"
+                                  class="app-theme__sidebar-menu-text"
                                   id="Safety guidelines-row-title"
                                   data-testid="safety_guidelines-row-title"
                                 >
@@ -469,7 +469,7 @@
                                 aria-expanded="false"
                                 tabindex="-1"
                               >
-                                <div class="_126gvgmd">
+                                <div class="app-theme__sidebar-menu-icon">
                                   <svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -489,7 +489,7 @@
                                   </svg>
                                 </div>
                                 <div
-                                  class="_bxm33j"
+                                  class="app-theme__sidebar-menu-text"
                                   id="Your submission-row-title"
                                   data-testid="review_and_submit-row-title"
                                 >
