--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -4429,7 +4429,7 @@
                                 ><div class="form-floating__label">
                                   <div class="spinner-chart__input-title-text">Host</div>
                                 </div>
-                                <div class="_14lk9e14">
+                                <div class="app-theme__sidebar-menu-expandable">
                                   <select
                                     name="instance_host_ids"
                                     class="_84hr5we"
