--- a/contact-host.html
+++ b/contact-host.html
@@ -1536,7 +1536,7 @@
                                                       data-testid="structured-search-input-search-button"
                                                     >
                                                       <div class="_186q534">
-                                                        <div class="_14lk9e14">
+                                                        <div class="app-theme__sidebar-menu-expandable">
                                                           <svg
                                                             viewBox="0 0 32 32"
                                                             xmlns="http://www.w3.org/2000/svg"
