--- a/dashboard.html
+++ b/dashboard.html
@@ -3121,7 +3121,7 @@
                                   href="/resources/hosting-experiences/a/create-a-video-for-your-in-person-experience-446"
                                   class="btn-dark--small"
                                   >Learn more</a
-                                ><button type="button" class="_1e5q4qoz">
+                                ><button type="button" class="app-theme__save-btn">
                                   Close
                                 </button>
                               </div>
