--- a/experienceType.html
+++ b/experienceType.html
@@ -2601,16 +2601,16 @@
       <div dir="ltr">
         <div data-theme="" class="app-theme">
           <div>
-            <div class="_1hhecre">
-              <div class="_gjnbsm" aria-hidden="false">
+            <div class="app-theme__container">
+              <div class="app-theme__wrapper" aria-hidden="false">
                 <div>
                   <nav
-                    class="_1cjyrsr"
+                    class="app-theme__nav"
                     aria-labelledby="edit-experience-modal-heading"
                   >
-                    <div class="_1utw96k5">
-                      <div class="_1ok79xh">
-                        <div class="_2mc3e2">
+                    <div class="app-theme__nav-container">
+                      <div class="app-theme__nav-wrapper">
+                        <div class="app-theme__logo-wrapper">
                           <a
                             aria-label="Experience hosting dashboard"
                             href="/experience-hosting"
@@ -2633,30 +2633,30 @@
                                   d="M16 1c2.008 0 3.463.963 4.751 3.269l.533 1.025c1.954 3.83 6.114 12.54 7.1 14.836l.145.353c.667 1.591.91 2.472.96 3.396l.01.415.001.228c0 4.062-2.877 6.478-6.357 6.478-2.224 0-4.556-1.258-6.709-3.386l-.257-.26-.172-.179h-.011l-.176.185c-2.044 2.1-4.267 3.42-6.414 3.615l-.28.019-.267.006C5.377 31 2.5 28.584 2.5 24.522l.005-.469c.026-.928.23-1.768.83-3.244l.216-.524c.966-2.298 6.083-12.989 7.707-16.034C12.537 1.963 13.992 1 16 1zm0 2c-1.239 0-2.053.539-2.987 2.21l-.523 1.008c-1.926 3.776-6.06 12.43-7.031 14.692l-.345.836c-.427 1.071-.573 1.655-.605 2.24l-.009.33v.206C4.5 27.395 6.411 29 8.857 29c1.773 0 3.87-1.236 5.831-3.354-2.295-2.938-3.855-6.45-3.855-8.91 0-2.913 1.933-5.386 5.178-5.42 3.223.034 5.156 2.507 5.156 5.42 0 2.456-1.555 5.96-3.855 8.907C19.277 27.766 21.37 29 23.142 29c2.447 0 4.358-1.605 4.358-4.478l-.004-.411c-.019-.672-.17-1.296-.714-2.62l-.248-.6c-1.065-2.478-5.993-12.768-7.538-15.664C18.053 3.539 17.24 3 16 3zm.01 10.316c-2.01.021-3.177 1.514-3.177 3.42 0 1.797 1.18 4.58 2.955 7.044l.21.287.174-.234c1.73-2.385 2.898-5.066 2.989-6.875l.006-.221c0-1.906-1.167-3.4-3.156-3.421h-.001z"
                                 ></path></svg></span
                           ></a>
-                          <div class="_1a1hrnn">
+                          <div class="app-theme__save-btn-wrapper">
                             <button
                               type="button"
-                              class="_1e5q4qoz"
+                              class="app-theme__save-btn"
                               onclick="window.location.href='experiences.html';"
                             >
                               Save and exit
                             </button>
                           </div>
                         </div>
-                        <h2 id="edit-experience-modal-heading" class="_7x5ntq">
+                        <h2 id="edit-experience-modal-heading" class="app-theme__header-h2">
                           Submit your experience
                         </h2>
                         <div class="relative">
                           <div>
                             <div class="box-border" id="Your idea-section-row">
                               <div
-                                class="_qx2ic59"
+                                class="app-theme__sidebar-menu"
                                 role="button"
                                 aria-disabled="false"
                                 aria-expanded="true"
                                 tabindex="0"
                               >
-                                <div class="_126gvgmd">
+                                <div class="app-theme__sidebar-menu-icon">
                                   <svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -2676,7 +2676,7 @@
                                   </svg>
                                 </div>
                                 <div
-                                  class="_bxm33j"
+                                  class="app-theme__sidebar-menu-text"
                                   id="Your idea-row-title"
                                   data-testid="idea-row-title"
                                 >
@@ -2684,22 +2684,22 @@
                                 </div>
                               </div>
                               <div
-                                class="_14lk9e14"
+                                class="app-theme__sidebar-menu-expandable"
                                 id="Your idea-section-row-row-expandable-items"
                               >
-                                <div class="_1rw28r4l">
-                                  <ul class="_19qnm18">
-                                    <li class="_1vtamo0">
+                                <div class="app-theme__sidebar-expandable-menus">
+                                  <ul class="app-theme__sidebar-expandable-ul">
+                                    <li class="app-theme__sidebar-expandable-li">
                                       <button
                                         type="button"
-                                        class="_o7xaku5"
+                                        class="app-theme__sidebar-expandable-button"
                                         data-veloute="experience-type"
                                       >
                                         <div class="_194uxgy3">
-                                          <div class="_cwxj1a">
+                                          <div class="app-theme__sidebar-expandable-text">
                                             Experience type
                                           </div>
-                                          <div class="_1lr0a4">
+                                          <div class="app-theme__sidebar-expandable-icon-wrapper">
                                             <svg
                                               viewBox="0 0 32 32"
                                               xmlns="http://www.w3.org/2000/svg"
@@ -2721,16 +2721,16 @@
                                         </div>
                                       </button>
                                     </li>
-                                    <li class="_1vtamo0">
+                                    <li class="app-theme__sidebar-expandable-li">
                                       <button
                                         type="button"
-                                        class="_o7xaku5"
+                                        class="app-theme__sidebar-expandable-button"
                                         data-veloute="city"
                                         onclick="window.location.href='basics.html';"
                                       >
-                                        <div class="_1o9iciw">
-                                          <div class="_cwxj1a">Basics</div>
-                                          <div class="_1lr0a4">
+                                        <div class="app-theme__sidebar-expandable-text-wrapper">
+                                          <div class="app-theme__sidebar-expandable-text">Basics</div>
+                                          <div class="app-theme__sidebar-expandable-icon-wrapper">
                                             <svg
                                               viewBox="0 0 32 32"
                                               xmlns="http://www.w3.org/2000/svg"
@@ -2752,15 +2752,15 @@
                                         </div>
                                       </button>
                                     </li>
-                                    <li class="_1vtamo0">
+                                    <li class="app-theme__sidebar-expandable-li">
                                       <button
                                         type="button"
-                                        class="_o7xaku5"
+                                        class="app-theme__sidebar-expandable-button"
                                         data-veloute="idea-theme"
                                       >
-                                        <div class="_1o9iciw">
-                                          <div class="_cwxj1a">Your theme</div>
-                                          <div class="_1lr0a4">
+                                        <div class="app-theme__sidebar-expandable-text-wrapper">
+                                          <div class="app-theme__sidebar-expandable-text">Your theme</div>
+                                          <div class="app-theme__sidebar-expandable-icon-wrapper">
                                             <svg
                                               viewBox="0 0 32 32"
                                               xmlns="http://www.w3.org/2000/svg"
@@ -2799,7 +2799,7 @@
                                 aria-expanded="false"
                                 tabindex="-1"
                               >
-                                <div class="_126gvgmd">
+                                <div class="app-theme__sidebar-menu-icon">
                                   <svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -2819,7 +2819,7 @@
                                   </svg>
                                 </div>
                                 <div
-                                  class="_bxm33j"
+                                  class="app-theme__sidebar-menu-text"
                                   id="What we're looking for-row-title"
                                   data-testid="expectations-row-title"
                                 >
@@ -2861,7 +2861,7 @@
                                 aria-expanded="false"
                                 tabindex="-1"
                               >
-                                <div class="_126gvgmd">
+                                <div class="app-theme__sidebar-menu-icon">
                                   <svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -2881,7 +2881,7 @@
                                   </svg>
                                 </div>
                                 <div
-                                  class="_bxm33j"
+                                  class="app-theme__sidebar-menu-text"
                                   id="Experience page-row-title"
                                   data-testid="experience_1-row-title"
                                 >
@@ -2920,7 +2920,7 @@
                                 aria-expanded="false"
                                 tabindex="0"
                               >
-                                <div class="_126gvgmd">
+                                <div class="app-theme__sidebar-menu-icon">
                                   <svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -2940,7 +2940,7 @@
                                   </svg>
                                 </div>
                                 <div
-                                  class="_bxm33j"
+                                  class="app-theme__sidebar-menu-text"
                                   id="Settings-row-title"
                                   data-testid="settings-row-title"
                                 >
@@ -2961,7 +2961,7 @@
                                 aria-expanded="false"
                                 tabindex="-1"
                               >
-                                <div class="_126gvgmd">
+                                <div class="app-theme__sidebar-menu-icon">
                                   <svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -2981,7 +2981,7 @@
                                   </svg>
                                 </div>
                                 <div
-                                  class="_bxm33j"
+                                  class="app-theme__sidebar-menu-text"
                                   id="Safety guidelines-row-title"
                                   data-testid="safety_guidelines-row-title"
                                 >
@@ -3023,7 +3023,7 @@
                                 aria-expanded="false"
                                 tabindex="-1"
                               >
-                                <div class="_126gvgmd">
+                                <div class="app-theme__sidebar-menu-icon">
                                   <svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -3043,7 +3043,7 @@
                                   </svg>
                                 </div>
                                 <div
-                                  class="_bxm33j"
+                                  class="app-theme__sidebar-menu-text"
                                   id="Your submission-row-title"
                                   data-testid="review_and_submit-row-title"
                                 >
