--- a/merchandising.html
+++ b/merchandising.html
@@ -4887,7 +4887,7 @@
                                                                     class="_186q534"
                                                                   >
                                                                     <div
-                                                                      class="_14lk9e14"
+                                                                      class="app-theme__sidebar-menu-expandable"
                                                                     >
                                                                       <svg
                                                                         viewBox="0 0 32 32"
@@ -12619,7 +12619,7 @@
                                             role="contentinfo"
                                             class="box-border"
                                           >
-                                            <div class="_14lk9e14">
+                                            <div class="app-theme__sidebar-menu-expandable">
                                               <div class="_jis43y">
                                                 <section class="footer__links">
                                                   <div
