--- a/products.html
+++ b/products.html
@@ -5461,7 +5461,7 @@
                                                       <div class="_1sl8tba">
                                                         <button
                                                           type="button"
-                                                          class="_1e5q4qoz"
+                                                          class="app-theme__save-btn"
                                                         >
                                                           Clear dates
                                                         </button>
@@ -8317,7 +8317,7 @@
                                                       data-testid="structured-search-input-search-button"
                                                     >
                                                       <div class="_186q534">
-                                                        <div class="_14lk9e14">
+                                                        <div class="app-theme__sidebar-menu-expandable">
                                                           <svg
                                                             viewBox="0 0 32 32"
                                                             xmlns="http://www.w3.org/2000/svg"
@@ -8559,7 +8559,7 @@
                                                         <div class="_c2acbp">
                                                           <button
                                                             type="button"
-                                                            class="_1e5q4qoz"
+                                                            class="app-theme__save-btn"
                                                           >
                                                             <div
                                                               class="flex-items-center"
@@ -8604,7 +8604,7 @@
                                                             aria-label="Add listing to a list"
                                                             data-testid="pdp-save-button-unsaved"
                                                             type="button"
-                                                            class="_1e5q4qoz"
+                                                            class="app-theme__save-btn"
                                                           >
                                                             <div
                                                               aria-hidden="true"
@@ -13803,7 +13803,7 @@
                                                         <div class="_1sl8tba">
                                                           <button
                                                             type="button"
-                                                            class="_1e5q4qoz"
+                                                            class="app-theme__save-btn"
                                                           >
                                                             Clear dates
                                                           </button>
@@ -16314,7 +16314,7 @@
                                                         <div class="_1sl8tba">
                                                           <button
                                                             type="button"
-                                                            class="_1e5q4qoz"
+                                                            class="app-theme__save-btn"
                                                           >
                                                             Clear dates
                                                           </button>
