--- a/resources.html
+++ b/resources.html
@@ -4862,7 +4862,7 @@
                         >
                           <div class="_h1mu4a">
                             <div style="margin-top: 16px; display: block">
-                              <button type="button" class="_1e5q4qoz">
+                              <button type="button" class="app-theme__save-btn">
                                 <div class="_1rzj9z6">
                                   <span
                                     class="_1hea4rk"
