--- a/transaction_history.html
+++ b/transaction_history.html
@@ -469,7 +469,7 @@
                                             <div class="ady5cna dir dir-ltr">
                                               <a
                                                 href="/help/topic/1452/payout-methods"
-                                                class="_1e5q4qoz"
+                                                class="app-theme__save-btn"
                                                 >Learn more</a
                                               >
                                             </div>
