rename _12to336 -> text-center

--- a/account-settings.html
+++ b/account-settings.html
@@ -1474,7 +1474,7 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="_12to336" id="FMP-target">
+                            <div class="text-center" id="FMP-target">
                               <div style="margin-bottom: 49px">
                                 <div
                                   style="margin-top: 52px; margin-bottom: 7px"
