rename explore-filter-daterange & main_content__sidebar-calendar-wrapper -> relative, remove excess properties

--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -901,7 +901,7 @@
                   <div class="main_content__body">
                     <div class="main_content__body-left">
                       <div class="main_content__sidebar" data-testid="sidebar">
-                        <div class="main_content__sidebar-calendar-wrapper" style="width: 293px">
+                        <div class="relative" style="width: 293px">
                           <div>
                             <div style="width: 292px">
                               <div
