--- a/products.html
+++ b/products.html
@@ -2996,7 +2996,7 @@
                                                     >
                                                       <div>
                                                         <div
-                                                          class="explore-filter-daterange"
+                                                          class="relative"
                                                           style="width: 550px"
                                                         >
                                                           <div>
@@ -10468,7 +10468,7 @@
                                                       >
                                                         <div>
                                                           <div
-                                                            class="explore-filter-daterange"
+                                                            class="relative"
                                                             style="width: 745px"
                                                           >
                                                             <div>
@@ -13822,7 +13822,7 @@
                                                       >
                                                         <div>
                                                           <div
-                                                            class="explore-filter-daterange"
+                                                            class="relative"
                                                             style="width: 543px"
                                                           >
                                                             <div>
