rename main_content__calendar-overlay & explore-filter-daterange__days -> calendar__days

--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -905,7 +905,7 @@
                           <div>
                             <div style="width: 292px">
                               <div
-                                class="main_content__calendar-overlay"
+                                class="calendar__days"
                                 aria-hidden="true"
                                 role="presentation"
                               >
