--- a/products.html
+++ b/products.html
@@ -3006,7 +3006,7 @@
                                                               "
                                                             >
                                                               <div
-                                                                class="explore-filter-daterange__days"
+                                                                class="calendar__days"
                                                                 aria-hidden="true"
                                                                 role="presentation"
                                                               >
@@ -10478,7 +10478,7 @@
                                                                 "
                                                               >
                                                                 <div
-                                                                  class="explore-filter-daterange__days"
+                                                                  class="calendar__days"
                                                                   aria-hidden="true"
                                                                   role="presentation"
                                                                 >
@@ -13832,7 +13832,7 @@
                                                                 "
                                                               >
                                                                 <div
-                                                                  class="explore-filter-daterange__days"
+                                                                  class="calendar__days"
                                                                   aria-hidden="true"
                                                                   role="presentation"
                                                                 >
